--- a/注意身体.html
+++ b/注意身体.html
@@ -31,7 +31,7 @@ $(document).ready(function()
 <div id="Progressbar1-label">0%</div>
 </div>
 <div id="wb_Shape1" style="position:absolute;left:115px;top:130px;width:316px;height:67px;z-index:5;">
-<a href="https://av6k.xyz"><div id="Shape1"><div id="Shape1_text"><span style="color:#FFE4E1;font-family:微软雅黑;font-size:24px;"><strong>接口一</strong></span></div></div></a></div>
+<a href="https://pp80.tv/"><div id="Shape1"><div id="Shape1_text"><span style="color:#FFE4E1;font-family:微软雅黑;font-size:24px;"><strong>接口一</strong></span></div></div></a></div>
 <div id="wb_Shape2" style="position:absolute;left:115px;top:250px;width:316px;height:67px;z-index:6;">
 <a href="https://ms2p6t.xyz/"><div id="Shape2"><div id="Shape2_text"><span style="color:#DB7093;font-family:微软雅黑;font-size:24px;"><strong>接口二</strong></span></div></div></a></div>
 <div id="wb_Shape3" style="position:absolute;left:115px;top:370px;width:316px;height:67px;z-index:7;">
